arreglos en el inicio

--- a/landingPagePubill.html
+++ b/landingPagePubill.html
@@ -24,25 +24,37 @@
                 <div id="primeraParte">
                     <h1>Inscribite en esta hermosa experiencia</h1>
                     <div id="divTimer">
-                        <div class="rectanguloTimer">
-                            <p id="dia" class="timer"></p>
+                        <div class="subTextTimer">
+                            <div class="rectanguloTimer">
+                                <p id="dia" class="timer"></p>
+                            </div>
+                            <h3>Días</h3>
                         </div>
                         <div class="circulosMedios">
                             <div class="circuloTimer"></div>
                             <div class="circuloTimer"></div>
                         </div>
-                        <div class="rectanguloTimer">
-                            <p id="hora" class="timer"></p>
+                        <div class="subTextTimer">
+                            <div class="rectanguloTimer">
+                                <p id="hora" class="timer"></p>
+                            </div>
+                            <h3>Horas</h3>
                         </div>
-                        <div class="rectanguloTimer">
-                            <p id="minuto" class="timer"></p>
+                        <div class="subTextTimer">
+                            <div class="rectanguloTimer">
+                                <p id="minuto" class="timer"></p>
+                            </div>
+                            <h3>Minutos</h3>
                         </div>
                         <div class="circulosMedios">
                             <div class="circuloTimer"></div>
                             <div class="circuloTimer"></div>
                         </div>
-                        <div class="rectanguloTimer">
-                            <p id="segundo" class="timer"></p>
+                        <div class="subTextTimer">
+                            <div class="rectanguloTimer">
+                                <p id="segundo" class="timer"></p>
+                            </div>
+                            <h3>Segundos</h3>
                         </div>
                     </div>
                 </div>
