--- a/landingPagePubill.html
+++ b/landingPagePubill.html
@@ -65,7 +65,7 @@
                     <button type="button" id="botonUnirse">Unete ahora!!!</button>
                 </div>
             </div>
-            <div class="contenedor-principal">
+            <div id="contenedor-principal">
                 <h2>Te invitamos al cumpleaños de Capitán del Espacio!!!</h2>
                 
                 <div class="seccion">
@@ -75,7 +75,7 @@
                     </h6>
                 </div>
         
-                <div class="seccion">
+                <div class="seccion" id="seccionAlrevez">
                     <h6>
                         El Capitán del Espacio tiene preparado un evento fuera de este mundo. Ven a disfrutar de juegos galácticos como el pelotero, toro mecánico y tirolesa, entre otros. Todo esto lo organizamos para ti, para que vivas una experiencia cósmica llena de diversión, aventuras y momentos inolvidables.
                     </h6>
